@startuml
skin rose

entity Account <<アカウント>> {
  +Id <<アカウントID>> <color:blue>bigint</color>
  --
  Code <<コード>> <color:blue>varchar(15)</color> <color:green>unique</color> //index//
  Nickname <<ニックネーム>> <color:blue>nvarchar(50)</color> //index//
  Salt <<ソルト>> <color:blue>varchar(24)</color>
  Hashed <<ハッシュ化パスワード>> <color:blue>varchar(64)</color>
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Profile <<プロファイル>> {
  +Id <<プロファイルID>> <color:blue>bigint</color>
  --
  -AccountId <<アカウントID>> <color:blue>bigint</color> <color:green>unique</color> //index//
  Biography <<自己紹介>> <color:blue>nvarchar(160)</color> <color:red>null</color>
  Location <<場所>> <color:blue>nvarchar(30)</color> <color:red>null</color>
  WebSite <<ウェブサイト>> <color:blue>varchar(max)</color> <color:red>null</color>
  Birthday <<誕生日>> <color:blue>date</color> <color:red>null</color>
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Friendship <<フレンドシップ>> {
  +Id <<フレンドシップID>> <color:blue>bigint</color>
  --
  -FolloweeId <<フォローされるアカウントID>> <color:blue>bigint</color> //index//
  -FollowerId <<フォローするアカウントID>> <color:blue>bigint</color> //index//
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Article <<記事>>{
  +Id <<記事ID>> <color:blue>bigint</color>
  --
  -AccountId <<アカウントID>> <color:blue>bigint</color> //index//
  Slug <<スラッグ>>　<color:blue>varchar(26)</color> <color:green>unique</color> //index//
  Text <<テキスト>> <color:blue>nvarchar(140)</color>
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Comment <<コメント>> {
  +Id <<コメントID>> <color:blue>bigint</color>
  --
  -AccountId <<アカウントID>> <color:blue>bigint</color> //index//
  -ArticleId <<記事ID>> <color:blue>bigint</color> //index//
  Text <<テキスト>> <color:blue>nvarchar(140)</color>
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Favorite <<お気に入り>> {
  +Id <<お気に入りID>> <color:blue>bigint</color>
  --
  -AccountId <<アカウントID>> <color:blue>bigint</color> //index//
  -ArticleId <<記事ID>> <color:blue>bigint</color> //index//
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Tag <<タグ>> {
  +Id <<タグID>> <color:blue>bigint</color>
  --
  Name <<タグ名>> <color:blue>nvarchar(30)</color> <color:green>unique</color> //index//
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

entity Tagging <<タグ付け>> {
  +Id <<タグ付けID>> <color:blue>bigint</color>
  --
  -ArticleId <<記事ID>> <color:blue>bigint</color> //index//
  -TagId <<タグID>> <color:blue>bigint</color> //index//
  CreatedAt <<作成日時>> <color:blue>datetime</color> //index//
  UpdatedAt <<更新日時>> <color:blue>datetime</color> <color:red>null</color>
}

Profile |o--|| Account
Friendship }o--|| Account
Account ||-o{ Article
Article ||-o{ Comment
Account ||--o{ Comment
Account ||-o{ Favorite
Article ||-o{ Favorite
Article ||--o{ Tagging
Tagging }o-|| Tag
@enduml